# ChangeLog for dev-lang/swi-prolog
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/swi-prolog/ChangeLog,v 1.328 2012/06/18 10:29:32 keri Exp $

*swi-prolog-6.1.5 (15 Jun 2012)

  15 Jun 2012; <keri@gentoo.org> +swi-prolog-6.1.5.ebuild:
  Bump -6.1 development version

  04 Jun 2012; Zac Medico <zmedico@gentoo.org> swi-prolog-5.10.5-r1.ebuild,
  swi-prolog-6.0.0.ebuild, swi-prolog-6.0.1.ebuild, swi-prolog-6.1.0.ebuild,
  swi-prolog-6.1.1.ebuild, swi-prolog-6.1.2.ebuild, swi-prolog-6.1.3.ebuild,
  swi-prolog-6.1.4.ebuild:
  inherit multilib for get_libdir

  18 May 2012; <keri@gentoo.org> swi-prolog-6.0.1.ebuild,
  swi-prolog-6.1.4.ebuild:
  Enable xpce to run from build directory; this allows the xpce test-suite to
  run

  15 May 2012; <keri@gentoo.org> swi-prolog-6.0.1.ebuild,
  swi-prolog-6.1.4.ebuild:
  Fix up failing JPL tests

*swi-prolog-6.1.4 (13 May 2012)

  13 May 2012; <keri@gentoo.org> +swi-prolog-6.1.4.ebuild, metadata.xml:
  Bump -6.1 development version

*swi-prolog-6.1.3 (04 Apr 2012)

  04 Apr 2012; <keri@gentoo.org> +swi-prolog-6.1.3.ebuild:
  Bump -6.1 development version

  05 Mar 2012; <keri@gentoo.org> -swi-prolog-5.11.34.ebuild,
  -swi-prolog-5.11.35.ebuild, -swi-prolog-5.11.36.ebuild,
  -swi-prolog-5.11.37.ebuild:
  Remove old development versions

*swi-prolog-6.0.1 (02 Mar 2012)

  02 Mar 2012; <keri@gentoo.org> +swi-prolog-6.0.1.ebuild:
  Version bump

*swi-prolog-6.1.2 (01 Mar 2012)
*swi-prolog-6.1.1 (01 Mar 2012)

  01 Mar 2012; <keri@gentoo.org> +swi-prolog-6.1.1.ebuild,
  +swi-prolog-6.1.2.ebuild:
  Bump -6.1 development version

*swi-prolog-6.1.0 (01 Mar 2012)

  01 Mar 2012; <keri@gentoo.org> +swi-prolog-6.1.0.ebuild:
  Bump -6.1 development version

*swi-prolog-6.0.0 (01 Mar 2012)

  01 Mar 2012; <keri@gentoo.org> +swi-prolog-6.0.0.ebuild:
  Version bump

*swi-prolog-5.11.37 (01 Mar 2012)

  01 Mar 2012; <keri@gentoo.org> +swi-prolog-5.11.37.ebuild: