@@ -1,6 +1,11 @@
 # ChangeLog for dev-lang/swi-prolog
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/swi-prolog/ChangeLog,v 1.328 2012/06/18 10:29:32 keri Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/swi-prolog/ChangeLog,v 1.329 2012/06/19 14:21:07 keri Exp $
+
+*swi-prolog-6.1.6 (19 Jun 2012)
+
+  19 Jun 2012; <keri@gentoo.org> +swi-prolog-6.1.6.ebuild:
+  Bump -6.1 development version
 
 *swi-prolog-6.1.5 (15 Jun 2012)
 
